fix: spacing on the social links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -443,7 +443,7 @@ footer {
 
 #social-links a {
 	color: #E8E8E8;
-	margin: 2.5rem;
+	margin: 1.5rem;
 	font-size: 40px;
 	transition: 200ms;
 }
